--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,16 +5,40 @@
  */
 
 /* You can override the default Infima variables here. */
+
+@font-face {
+  font-family: 'Avenir Next';
+  src: url('../../static/fonts/avenir/AvenirNextLTPro-Medium.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Avenir Next';
+  src: url('../../static/fonts/avenir/AvenirNextLTPro-Bold.otf') format('otf');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Avenir Next';
+  src: url('../../static/fonts/avenir/AvenirNextLTPro-Heavy.otf') format('otf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
 :root {
-  --ifm-color-primary: #006994;
-  --ifm-color-primary-dark: #005570;
-  --ifm-color-primary-darker: #003f51;
-  --ifm-color-primary-darkest: #002d3b;
-  --ifm-color-primary-light: #008fb3;
-  --ifm-color-primary-lighter: #00a8cc;
-  --ifm-color-primary-lightest: #00c2e0;
+  --ifm-color-primary: #4A5A81;
+  --ifm-color-primary-dark: #15295B;
+  --ifm-color-primary-darker: #081A46;
+  --ifm-color-primary-darkest: #051230;
+  --ifm-color-primary-light: #6D7CA0;
+  --ifm-color-primary-lighter: #8596BE;
+  --ifm-color-primary-lightest: #B7C6E8;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  font-family: Avenir Next,sans-serif;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
