--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,15 +35,16 @@
   --ifm-color-primary-darkest: #051230;
   --ifm-color-primary-light: #6D7CA0;
   --ifm-color-primary-lighter: #8596BE;
-  --ifm-color-primary-lightest: #B7C6E8;
+  --ifm-color-primary-lightest: #00c2e0;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-heading-font-family: font-family: Avenir Next,sans-serif;
   font-family: Avenir Next,sans-serif;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #2a93d5;
+  --ifm-color-primary: #8596BE;
   --ifm-color-primary-dark: #207cbf;
   --ifm-color-primary-darker: #185ea6;
   --ifm-color-primary-darkest: #0d408d;
@@ -52,3 +53,5 @@
   --ifm-color-primary-lightest: #65c8f4;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+navbar_title { text-transform: uppercase; }
