--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,8 +38,9 @@
   --ifm-color-primary-lightest: #00c2e0;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --ifm-heading-font-family: font-family: Avenir Next,sans-serif;
   font-family: Avenir Next,sans-serif;
+  --ifm-heading-font-family: font-family: Avenir Next,sans-serif;
+  --ifm-h2-font-size: font-size: 2.5rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -55,3 +56,8 @@
 }
 
 navbar_title { text-transform: uppercase; }
+h2.subhead { 
+  text-align: center;
+  color: var(--ifm-color-primary-dark);
+  font-size: 2.5rem;
+ }
