--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,12 +56,12 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-navbar_title { text-transform: uppercase; }
-
 h2.subhead { 
   text-align: center;
   color: var(--ifm-color-primary-dark);
   font-size: 2.5rem;
  }
- tertiary { color: var(--ifm-color-primary-lightest)}
- center { text-align: center;}
+  
+ .center { text-align: center;}
+
+ .navbar__brand { text-transform: uppercase; }
