--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,12 +29,12 @@
 
 
 :root {
-  --ifm-color-primary: #4A5A81;
-  --ifm-color-primary-dark: #15295B;
-  --ifm-color-primary-darker: #081A46;
-  --ifm-color-primary-darkest: #051230;
-  --ifm-color-primary-light: #6D7CA0;
-  --ifm-color-primary-lighter: #8596BE;
+  --ifm-color-primary: #4a5a81;
+  --ifm-color-primary-dark: #435174;
+  --ifm-color-primary-darker: #3f4d6e;
+  --ifm-color-primary-darkest: #343f5a;
+  --ifm-color-primary-light: #51638e;
+  --ifm-color-primary-lighter: #556894;
   --ifm-color-primary-lightest: #00c2e0;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
@@ -46,13 +46,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #8596BE;
-  --ifm-color-primary-dark: #207cbf;
-  --ifm-color-primary-darker: #185ea6;
-  --ifm-color-primary-darkest: #0d408d;
-  --ifm-color-primary-light: #33a0d8;
-  --ifm-color-primary-lighter: #4db4e6;
-  --ifm-color-primary-lightest: #65c8f4;
+  --ifm-color-primary: #8596be;
+  --ifm-color-primary-dark: #7084b3;
+  --ifm-color-primary-darker: #657bad;
+  --ifm-color-primary-darkest: #4f6394;
+  --ifm-color-primary-light: #9aa8c9;
+  --ifm-color-primary-lighter: #a5b1cf;
+  --ifm-color-primary-lightest: #c4cce0;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
