--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,13 +35,13 @@
   --ifm-color-primary-darkest: #343f5a;
   --ifm-color-primary-light: #51638e;
   --ifm-color-primary-lighter: #556894;
-  --ifm-color-primary-lightest: #00c2e0;
+  --ifm-color-primary-lightest: #6376a5;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   font-family: Avenir Next,sans-serif;
   --ifm-heading-font-family: font-family: Avenir Next,sans-serif;
   --ifm-h2-font-size: font-size: 2.5rem;
-  --ifm-link-color: var(--ifm-color-primary-lightest);
+  --ifm-link-color: #00c2e0;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -75,12 +75,17 @@ label {
 input, textarea {
   font-family:inherit;
   font-size: inherit;
-  border: 1px solid #8e8e8e;
-  border-radius: 3px;
+  border: 1px solid #8596be;
+  border-radius: 10px;
   display: block;
   margin: 5px auto;
   margin-bottom: 20px;
-  padding: 10px 5px;
+  padding: 15px;
   font-size: 20px;
   width: 80%;
 } 
+
+.form-box { 
+  padding: 50px;
+  border-radius: 10px;
+}
