--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -57,6 +57,10 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+.hero {
+  background: rgb(81,108,170);
+  background: linear-gradient(225deg, rgba(81,108,170,1) 0%, rgba(74,90,129,1) 100%);}
+
 .hero .button--secondary {
   background: rgb(154,168,201);
   background: linear-gradient(31deg, rgba(154,168,201,1) 0%, rgba(255,255,255,1) 100%);
@@ -67,8 +71,7 @@
   background: rgb(154,168,201);
   background: linear-gradient(31deg, rgba(154,168,201,1) 0%, rgba(255,255,255,1) 50%);
   box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.3);
-  }
-
+}
 
 h2.subhead { 
   text-align: center;
@@ -102,4 +105,18 @@ input, textarea {
 .form-box { 
   padding: 50px;
   border-radius: 10px;
+}
+
+form .button.button--secondary {
+  background: rgb(97,25,94);
+  background: linear-gradient(43deg, rgba(97,25,94,1) 0%, rgba(203,88,100,1) 50%, rgba(252,176,69,1) 100%);
+  color: #ffffff;
+  border: none;
+  transition-property: color,background-color,box-shadow;
+  transition-duration: 1s;
+}
+
+form .button.button--secondary:hover {
+  background: rgb(97,25,94);
+  background: linear-gradient(43deg, rgba(97,25,94,1) 0%, rgba(203,88,100,1) 35%, rgba(252,176,69,1) 100%);  box-shadow: 0px 0px 10px 0px rgba(252,176,69, 0.3);
 }
