--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -40,7 +40,6 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   font-family: Avenir Next,sans-serif;
   --ifm-heading-font-family: font-family: Avenir Next,sans-serif;
-  --ifm-h2-font-size: font-size: 2.5rem;
   --ifm-link-color: var(--ifm-color-primary-lightest);
 }
 
@@ -56,12 +55,12 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-h2.subhead { 
+/* h2.subhead {
   text-align: center;
   color: var(--ifm-color-primary-dark);
   font-size: 2.5rem;
- }
-  
+ } */
+
  .center { text-align: center;}
 
  .navbar__brand { text-transform: uppercase; }
@@ -83,4 +82,4 @@ input, textarea {
   padding: 10px 5px;
   font-size: 20px;
   width: 80%;
-} 
+}
