Add links to hero image, fix warnings

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -67,6 +67,10 @@
   );
 }
 
+.hero .hero__subtitle a {
+  color: inherit !important;
+}
+
 .hero .button--secondary {
   background: rgb(154, 168, 201);
   background: linear-gradient(
