Add banner for blog post

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -159,7 +159,8 @@ form .button.button--secondary:hover {
   }
 }
 
-div[itemprop="articleBody"] p, ul {
+div[itemprop="articleBody"] p,
+ul {
   font-size: 1.2rem;
   line-height: 2.2rem;
 }
