--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -159,13 +159,15 @@ form .button.button--secondary:hover {
   }
 }
 
+[itemprop="blogPost"] p:first-child {
+  margin-top: 1.5rem;
+}
 [itemprop="blogPost"] p {
-  font-size: 1.2rem;
-  line-height: 2.2rem;
+  font-size: 1rem;
+  line-height: 1.75rem;
 }
 
-[itemprop="blogPost"]
-ul {
-  font-size: 1.2rem;
-  line-height: 2.2rem;
+[itemprop="blogPost"] ul {
+  font-size: 1rem;
+  line-height: 1.75rem;
 }
